ajustes na página inicial; modificação da estrutura de diretório; criação de uma folha de estilo personalizada

--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="text-center">
-        <img src="download.png" class="rounded" alt="SENAC" tabindex="1" width="150px" title="Titulo">
+        <img src="public/images/download.png" class="rounded" alt="SENAC" tabindex="1" width="150px" title="Titulo">
     </div>
     <div class="text-right">
         <input type="button" value="Portal do Aluno" />
